--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+netrek-client-cow (3.2.4-0) unstable; urgency=low
+
+  * upstream release
+
+ -- James Cameron <quozl@us.netrek.org>  Wed, 16 Jul 2008 09:30:00 +1000
+
 netrek-client-cow (3.2.2-0) unstable; urgency=low
 
   * upstream release
