--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+netrek-client-cow (3.2.5-0) unstable; urgency=low
+
+  * upstream release
+
+ -- James Cameron <quozl@us.netrek.org>  Tue, 22 Jul 2008 20:02:57 +1000
+
 netrek-client-cow (3.2.4-0) unstable; urgency=low
 
   * upstream release
