--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+netrek-client-cow (3.2.5-1) unstable; urgency=low
+
+  * added missing dependencies and verified clean build for etch
+
+ -- James Cameron <quozl@us.netrek.org>  Thu, 24 Jul 2008 10:47:16 +1000
+
 netrek-client-cow (3.2.5-0) unstable; urgency=low
 
   * upstream release
