--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Mon Sep 15 16:41:12 2008  James Cameron  <quozl@us.netrek.org>
+
+	* netrek-client-cow-3.2.7: released.
+
+	- add a server feature for the metaserver list,
+	- fix statistics rounding error,
+	- fix ship flicker,
+	- in safe-idle mode, lower update rate, beep on t-mode begin,
+	- metaserver, fix unknown status, failed to initialise,
+	- remove OpenVMS support,
+	- fix a compilation issue on x86_64.
+
 Tue Jul 29 21:45:16 2008  James Cameron  <quozl@us.netrek.org>
 
 	* netrek-client-cow-3.2.6: released.
