--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Sep 16 16:10:18 2008  James Cameron  <quozl@us.netrek.org>
+
+	- placing mouse in message composition window and typing did not
+	behave in the historical fashion, the keystrokes were handled by
+	the game as well as being added to the message being composed,
+	reported by Zachary Uram.
+
 Mon Sep 15 16:41:12 2008  James Cameron  <quozl@us.netrek.org>
 
 	* netrek-client-cow-3.2.7: released.
