--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 27 20:01:36 2008  James Cameron  <quozl@us.netrek.org>
+
+	- COPYING: copyright and license review.
+
 Tue Sep 16 16:10:18 2008  James Cameron  <quozl@us.netrek.org>
 
 	- placing mouse in message composition window and typing did not
