--- a/debian/netrek-client-cow.6
+++ b/debian/netrek-client-cow.6
@@ -1,8 +1,8 @@
-.TH COW "1" "July 2008" "COW 3.2.5" "User Commands"
+.TH NETREK-CLIENT-COW 6 "July 2008"
 .SH NAME
-COW \- manual page for COW 3.2.5
+COW \- manual page for NETREK-CLIENT-COW 3.2.7
 .SH SYNOPSIS
-.B netrek
+.B netrek-client-cow
 [\fIoptions\fR] [\fIdisplay-name\fR]
 .SH DESCRIPTION
 This is a client for the multi-player game of Netrek.
