--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Mon Jan  5 19:14:26 2009  James Cameron  <quozl@us.netrek.org>
+
+	* netrek-client-cow-3.2.9: released
+
+	- add identity blinding feature, which removes names, ranks, versions,
+
+	- remove safe-idle from clue games,
+
+	- include key file in binary distribution,
+
+	- clarify license on work contributed by Lars Bernhardsson.
+
 Mon Sep 29 14:28:07 2008  James Cameron  <quozl@us.netrek.org>
 
 	* netrek-client-cow-3.2.8: released
