--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+netrek-client-cow (3.2.11) unstable; urgency=low
+
+  * kick version
+
+ -- James Cameron <quozl@us.netrek.org>  Thu, 04 Jun 2009 14:35:14 +1000
+
 netrek-client-cow (3.2.7-1) unstable; urgency=low
 
   * Initial release (Closes: #1111).
